tests/fixtures/invalid/err005_use_instead_ambiguous.rex
use.instead as $out {
  do work quickly with this text
}
